ensure header doesnt get cut off

--- a/css/shared.css
+++ b/css/shared.css
@@ -137,12 +137,11 @@ table {
     column-gap: var(--grid-gap);
   }
   .site-header > a:first-of-type {
-    grid-column: 1 / var(--content-col-end);
+    grid-column: 1 / 3;
     justify-self: start;
   }
   .site-header-nav {
-    grid-column: var(--content-col-end) / -1;
-    justify-self: start;
+    grid-column: 3 / -1;
     margin-left: 0;
   }
   .page-grid > * {
@@ -159,6 +158,9 @@ table {
   .page-grid > * {
     grid-column: 3 / 6;
   }
+  .site-header-nav {
+    grid-column: 5 / -1;
+  }
 }
 
 @media (min-width: 1900px) {
@@ -169,5 +171,8 @@ table {
   }
   .page-grid > * {
     grid-column: 4 / 7;
+  }
+  .site-header-nav {
+    grid-column: 7 / -1;
   }
 }
